# Valkun

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Valkun.sln  buildDebug.bat  buildRelease.bat
Resources/Textures/: tex.tga  tex.xcf
Valkun/: Valkun.cpp
src/: DepthImage.h  EasyImage.h  InputHandler.h  Mesh.h  Valkun.cpp  Vertex.h  VulkanBuffer.h  VulkanUtils.h  frag.spv  runCompiler.bat  shader.frag  shader.vert  vert.spv
